    openpgp/types_test.go, openpgp/userattribute.go, openpgp/userid.go,
    openpgp/worker_test.go:
    - Move packet record parsing into each type's creator function.
    - Store content-duplicate packets as unsupported key material
      for SKS compatibility.
    - Validate function now removes packets without any signatures,
      emulate keyMerge.ml behavior.

 -- Casey Marshall <cmars@snowcrash>  Tue, 17 Sep 2013 22:09:56 -0500

hockeypuck (1.0~a2) precise; urgency=low

  [ Casey Marshall ]
  * Opening 1.0~a2 development
  * Replace MongoDB backend with PostgreSQL.
  * Makefile:
    - Update binary name.
  * debian/install, debian/manpages, instroot/usr/share/hockeypuck-
    mgo/scripts/fix-keywords.js, instroot/usr/share/man/man1/hockeypuck-
    mgo.1 => instroot/usr/share/man/man1/hockeypuck.1, === removed
    directory instroot/usr/share/hockeypuck-mgo, === removed directory
    instroot/usr/share/hockeypuck-mgo/scripts:
    - Updating packaging.
  * debian/control, scripts/crossbuild.sh:
    - Update golang build dependency version (1.1).
    - Fix crossbuild script target binary.
  * config.go, debian/copyright, debian/postinst, debian/upstart,
    hkp/router.go, instroot/etc/hockeypuck/hockeypuck.conf,
    instroot/usr/share/man/man1/hockeypuck.1, log.go, openpgp/pks.go,
    openpgp/responses.go, README, router.go:
    - Update installation, summary doc.
    - Some manpage fixes.
    - Update debian copyright attribution for third-party Go packages.
    - Create postgres user and database in debian postinst.
    - Update upstart to trigger off postgresql, fix binary name.
    - Do not leak error messages on HTTP error status codes. Be terse.
    - Update example configuration to new TOML format.
    - Fix go-toml keys in some settings.
    - go fmt
  * openpgp/schema.go:
    - Better explanation of UID/UAT creation timestamp.
    - Reorder alter table statements to allow for easier copy/paste into
      psql.
  * openpgp/pks.go, openpgp/responses.go: